force-app/main/default/objects/LLC_BI__Tenant__c/LLC_BI__Tenant__c.object-meta.xml
<CustomObject>
    <description>This object represents an occupant of a commercial or residential property, responsible for meeting the terms of their tenancy agreement.</description>
    <label>Tenant</label>
    <nameField>
        <displayFormat>Tenant-{00000000}</displayFormat>
        <label>Tenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>