force-app/main/default/objects/LLC_BI__Tenant__c/fields/LLC_BI__Company_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Company_Identification_Number__c</fullName>
    <description>Users populate this required text field to indicate the identification number for the tenant.</description>
    <label>Company Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>