force-app/main/default/objects/LLC_BI__Tenant__c/fields/LLC_BI__Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Country_ISO_Code__c</fullName>
    <description>Users populate this required picklist field to capture the ISO 3166 Alpha-3 code to the country where the tenant is based.</description>
    <label>Country ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABW</fullName>
            </value>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>ALA</fullName>
            </value>
            <value>
                <fullName>ALB</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>ARE</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>ATA</fullName>
            </value>
            <value>
                <fullName>ATF</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>AZE</fullName>
            </value>
            <value>
                <fullName>BDI</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>BES</fullName>
            </value>
            <value>
                <fullName>BFA</fullName>
            </value>
            <value>
                <fullName>BGD</fullName>
            </value>
            <value>
                <fullName>BGR</fullName>
            </value>
            <value>
                <fullName>BHR</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>BIH</fullName>
            </value>
            <value>
                <fullName>BLM</fullName>
            </value>
            <value>
                <fullName>BLR</fullName>
            </value>
            <value>
                <fullName>BLZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>