force-app/main/default/objects/LLC_BI__Tenant__c/fields/LLC_BI__Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Name__c</fullName>
    <description>Users populate this optional text field to capture the name of the tenant.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>